fix:added white-space:nowrap to play-list ul

--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ h4 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 20%;
+    width: 250px;
     height: calc(100vh - 80px);
     overflow-y: auto;
     padding: 10px 40px 0px 30px;
@@ -579,7 +579,7 @@ h4 {
     justify-content: end;
     align-items: center;
     position: fixed;
-    width: 80%;
+    width: calc(100% - 250px);
     height: 80px;
     background-color: var(--upgrade-bar-background-color);
 }
@@ -605,7 +605,7 @@ h4 {
 
 .play-list {
     flex-direction: column;
-    width: 80%;
+    width: calc(100% - 250px);
 }
 
 .play-list-main {
@@ -624,6 +624,7 @@ h4 {
     color: var(--link-color);
     display: flex;
     justify-content: center;
+    white-space: nowrap;
 
 }
 
@@ -735,7 +736,7 @@ h4 {
 .left-media {
     width: 25%;
     display: flex;
-    padding: 10px;
+    padding-left: 10px;;
     gap: 10px;
     align-items: center;
 }
@@ -747,7 +748,9 @@ h4 {
 }
 
 .description-media {
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    white-space: nowrap;
 }
 
 
@@ -808,6 +811,7 @@ h4 {
     vertical-align: middle;
     font-size: 20px;
 }
+
 
 
 .play-media-options a:nth-child(3) i {
